<resources>
    <string name="app_name">AplikasiIDN</string>
    <string name="sreach">Sreach</string>
    <string name="change_language">Change Language</string>
    <string name="Home">Home</string>
    <string name="informasi_idn">Informasi IDN</string>
    <string name="about">About</string>

    <!--About Nama Alamat-->
    <string name="tujuan">Tujuan : Aplikasi ini bertujuan untuk memudahkan Pengguna agar mudah dalam mengetahui informasi Sekolah IDN Boarding School</string>
    <string name="daftar_kelas">Daftar Kelas</string>
    <string name="daftar_asrama">Daftar Asrama</string>
    <string name="eskul">Extrakulikuler</string>
    <string name="pelajaran">Pelajaran</string>
    <string name="Struktur">Struktur IDN : </string>
    <string name="ananda_gharin_s">Ananda Gharin S</string>
    <string name="harits">Harits</string>
    <string name="ttl">Ttl : JAKARTA 2 JUNI 2006 </string>
    <string name="alamat">Alamat : Taman Cileungsi Block Bc No 2</string>
    <string name="email">Gmail : haritsdeveloper@gmail.com</string>
    <string name="ig">Instagram : @rtsss.001</string>
    <string name="ahmad_miqdad">Ahmad Miqdad</string>
    <string name="alamattt">Alamat : Jl.Al - Mabruk</string>
    <string name="umurr">13 Tahun</string>
    <string name="ttll">Ttl : JAKARTA 28 NOVEMBER 2005</string>
    <string name="gmail">Gmail : miqdaddeveloper@gmail.com</string>
    <string name="instagrama">Instagram : @miqdaaad_</string>
    <string name="kelas">Kelas : 8D</string>
    <string name="gharyn">Gharyn</string>
    <string name="miqdad">Miqdad</string>
    <string name="bioadata">Biodata :</string>
    <string name="t_tgl_medan_12_january_2006">Ttl : Medan, 12 january 2006</string>
    <string name="tinggal_bekasi_barat_buluvar_hijau_perumahan_duta_bumi_1_blok_e_no_5">Tinggal : Bekasi Barat, Buluvar hijau Perumahan Duta Bumi 1 Blok E No 5</string>
    <!--About Nama Alamat-->
<!--Nama Item / Button-->
    <string name="tujua">Tujuan :</string>
    <string name="jadwal_eskul">Jadwal Eskul</string>
    <string name="pj_eskul">PJ Eskul</string>
    <string name="informasi_idn_">Informasi IDN</string>
    <string name="tetang_guru">Tentang Guru</string>
    <string name="presentasi_idn">Prestasi IDN</string>
    <string name="tetang_siswa">Tentang Siswa</string>
    <string name="Kontak_idn">Kontak IDN</string>
    <string name="tempat_idn">Tempat IDN</string>
    <!--Nama Item / Button-->
    <!--Nama Gurunya-->
    <string name="nama">Nama :</string>
    <string name="asal">Asal : </string>
    <string name="emailmus">Email :</string>
    <string name="telp">No Telp :</string>
    <string name="selengkapnya">Selengkapnya</string>
    <!--Nama Gurunya-->


    <!--data guru 7a-->
    <string name="namaguru7a">Ust.Aziz</string>
    <string name="asalguru7a">Tanggerang</string>
    <string name="emailguru7a">mabdulaziz124@gmail.com</string>
    <string name="teleponguru7a">+62 812-1281-0390</string>

    <!--data guru 7b-->
    <string name="namaguru7b">Ust.Suut</string>
    <string name="asalguru7b">Banyumas</string>
    <string name="emailguru7b">suutmulyono@rocketmail.com</string>
    <string name="teleponguru7b">+62 891-4473-387</string>

    <!--data guru 7c-->
    <string name="namaguru7c">Ust.Ulum</string>
    <string name="asalguru7c">Tanggerang</string>
    <string name="emailguru7c">sahrululum73@gmail.com</string>
    <string name="teleponguru7c">+62 838-1301-3523</string>

    <!--data guru 7d-->
    <string name="namaguru7d">Ust.Lucas</string>
    <string name="asalguru7d">Purworejo</string>
    <string name="emailguru7d">lucas@gmail.com</string>
    <string name="teleponguru7d">+62 8953-2908-1662</string>

    <!--data guru 8a-->
    <string name="namaguru8a">Ust.Daffa</string>
    <string name="asalguru8a">Bekasi</string>
    <string name="emailguru8a">hzir.daffa@gmail.com</string>
    <string name="teleponguru8a">+62 895-0624-2545</string>

    <!--data guru 8b-->
    <string name="namaguru8b">Ust.Haidar</string>
    <string name="asalguru8b">Jawa timur</string>
    <string name="emailguru8b">haidar.zamzam99@gmail.com</string>
    <string name="teleponguru8b">+62 812-1601-2160</string>

    <!--data guru 8c-->
    <string name="namaguru8c">Ust.Zafraan</string>
    <string name="asalguru8c">Bandung</string>
    <string name="emailguru8c">rahmanzafraan@gmail.com</string>
    <string name="teleponguru8c">+62 856-9412-4566</string>

    <!--data guru 8d-->
    <string name="namaguru8d">Ust.Salim</string>
    <string name="asalguru8d">Cilacap</string>
    <string name="emailguru8d">saliim.hartono@gmail.com</string>
    <string name="teleponguru8d">+62 859-7270-6566</string>

    <!--data guru 9-->
    <string name="namaguru9">Ust.Aji</string>
    <string name="asalguru9">Semarang</string>
    <string name="emailguru9">setyaji07@gmail.com</string>
    <string name="teleponguru9">+62 896-3004-7842</string>
    ------------------------------------------------------
    <!--data musyrif 7a-->
    <string name="namamusyrifumar">Ust.Iqbal</string>
    <string name="asalmusyrifumar">Palembang</string>
    <string name="emailmusyrifumar">(tidak tahu emailnya)</string>
    <string name="teleponmusyrifumar">+62 813-7938-8091</string>

    <!--data guru 7b-->
    <string name="namamusyrifkhalid">Ust.Hanif</string>
    <string name="asalmusyrifkhalid">Aceh</string>
    <string name="emailmusyrifkhalid">limbawaraqah@gmail.com</string>
    <string name="teleponmusyrifkhalid">+62 812-7536-9281</string>

    <!--data guru 7c-->
    <string name="namamusyrifutsman">Ust.Doni</string>
    <string name="asalmusyrifutsman">Palembang</string>
    <string name="emailmusyrifutsman">doniazizi02@gmail.com</string>
    <string name="teleponmusyrifutsman">+62 8583-9434-3888</string>

    <!--data guru 7d-->
    <string name="namamusyrifali">Ust.Agus</string>
    <string name="asalmusyrifali">Palembang</string>
    <string name="emailmusyrifali">agustrimuslim@gmail.com</string>
    <string name="teleponmusyrifali">+62 857-0910-6642</string>

    <!--data guru 8a-->
    <string name="namamusyrifthoriq">Ust.Husein</string>
    <string name="asalmusyrifthoriq">Bekasi Utara</string>
    <string name="emailmusyrifthoriq">huseinfadilah@gmail.com</string>
    <string name="teleponmusyrifthoriq">+62 812-8336-1168</string>

    <!--data guru 8b-->
    <string name="namamusyrifabdurrahman">Ust.Dzaki</string>
    <string name="asalmusyrifabdurrahman">Bekasi</string>
    <string name="emailmusyrifabdurrahman">nazma0899@gmail.com</string>
    <string name="teleponmusyrifabdurrahman">+62 813-1439-2933</string>

    <!--data guru 9-->
    <string name="namamusyrif9">Ust.Yudi</string>
    <string name="asalmusyrif9">Palembang</string>
    <string name="emailmusyrif9">ahmadwahfiuddin@gmai.com</string>
    <string name="teleponmusyrif9">+62 813-7392-3065</string>



</resources>