<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentInformasiIDN">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/lengkung"
            android:gravity="center"
            android:text="@string/informasi_idn_"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            android:id="@+id/Struktur"
            android:background="@color/text"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/lengkung"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/struktur"
                    android:layout_marginStart="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:text="@string/Struktur"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold" />

                    <View
                        android:layout_width="160dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:background="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:text="@string/tetang_guru" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            android:id="@+id/Presentasi"
            android:background="@color/text"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/lengkung"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/presentasi_idn"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="160dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:background="#000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tetang_siswa"
                        android:textSize="25sp" />
                </LinearLayout>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/idn"
                    android:layout_gravity="end"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            android:id="@+id/Lokasi"
            android:background="@color/text"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/lengkung"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/kontak"
                    android:layout_marginStart="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/Kontak_idn"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="160dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:background="#000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tempat_idn"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>



    </LinearLayout>






</FrameLayout>