<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAbout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/imgGharin"
                    android:layout_width="175dp"
                    android:layout_height="165dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/lengkung"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="125dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="1dp"
                        android:src="@drawable/gharyn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/gharyn"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/imgHarits"
                    android:layout_width="175dp"
                    android:layout_height="165dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/lengkung"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="125dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="1dp"
                        android:src="@drawable/harist" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/harits"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/imgMiqdad"
                android:layout_width="175dp"
                android:layout_height="165dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/lengkung"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="125dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/miqdad" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/miqdad"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tujua"
                android:textSize="25sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10sp"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:gravity="center"
                    android:text="@string/tujuan"
                    android:textSize="20sp"
                    android:textStyle="italic" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>