<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".KelasAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/ivkelas"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_people_black_24dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:paddingTop="60dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/nama" />

            <TextView
                android:id="@+id/asalkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/asal" />

            <TextView
                android:id="@+id/emailkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/emailmus" />

            <TextView
                android:id="@+id/telpkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/telp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:paddingTop="60dp"
            android:paddingStart="10dp">
            <TextView
                android:id="@+id/isinamakel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/nama" />

            <TextView
                android:id="@+id/isiasalkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/asal" />

            <TextView
                android:id="@+id/isiemailkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/emailmus" />

            <TextView
                android:id="@+id/isitelpkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/telp" />

        </LinearLayout>




    </LinearLayout>


    <ListView
        android:id="@+id/mobilelist"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>